--- a/calculator.css
+++ b/calculator.css
@@ -2,4 +2,48 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    max-width: 480px;
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container{
+    max-width: 420px;
+    height: 700px;
+    background-color: #4c5e5e;
+}
+.title{
+    text-align: center;
+    font-size: 40px;
+    padding: 25px;
+}
+.form-section{
+    height: 400px;
+    margin-top: 20px;
+}
+input{
+    
+    border-style: none;
+    
+    border-radius: 5px;
+    height:40px;
+    width: 300px;
+    color: white;
+    margin-top: 5px;
+    font-size: larger;
+    padding-left: 8px;
+}
+
+button{
+    width: 300px;
+    border-style: none;
+    height: 40px;
+    border-radius: 5px;
+    margin-top: 30px;
+    background-color: ;
 }
